# Cognix

./: .gitignore  README.md  pyproject.toml  requirements.txt
cognix/: __init__.py
cognix/core/: compressor.py  conflict_resolver.py  deduplicator.py  event_bus.py  event_collector.py  habit_extractor.py  insight_engine.py  memory_classifier.py  memory_compressor.py  memory_system.py  preference_extractor.py  preference_store.py  reminder_service.py  retrieval_engine.py  rule_engine.py  scheduler.py  short_term_redis.py  skill_evolution.py  skills_manager.py
cognix/dream/: __init__.py  process.py  scheduler.py
cognix/hooks/: __init__.py  base.py  context_threshold.py  feishu_hook.py
cognix/interfaces/agent/: __init__.py
cognix/interfaces/api/: main.py
cognix/interfaces/cli/: __init__.py  cmd_context.py  cmd_dream.py  cmd_recall.py  cmd_remember.py  (+2 more)
cognix/storage/: __init__.py  event_store.py  file_store.py  markdown_store.py  sqlite_store.py
cognix/utils/: config.py
docs/: API文档.md  Mock测试说明文档.md  PRD.md  architecture.md  autodream_evaluation_framework.md  autodream_usage_guide.md  cli-guide.md  feishu-integration.md  manual-testing-guide.md  plugin.md  实现计划.md  记忆系统使用说明.md  记忆系统设计文档.md  需求文档.md  项目优化记录_v1.0.md
docs/archive/: 实现计划.md  记忆系统使用说明.md  记忆系统设计文档.md
docs/plugin/: COMPARISON_WITH_MEM0.md  COMPATIBILITY_FIX_PLAN.md
examples/cognix_langchain_agent/: .env.example  README.md  agent.py  chat.py  cognix_tools.py  test_agent.py
openclaw-plugin-cognix/: .gitignore  .npmignore  README.md  SWITCH_FROM_MEM0.md  index.ts  openclaw.plugin.json  package-lock.json  package.json  simple-verify.js  verify-interface.js
openclaw-plugin-cognix/tests/: plugin-interface.test.js
scripts/: cleanup_test_files.bat  cleanup_test_files.py  migrate_autodream_db.py
skills/: cognix-memory.yaml
tests/: debug_index.py  mock_agent_memory_test.py  test_event_bus.py  test_memory_classifier.py  test_memory_compressor.py  test_memory_system.py  test_reminder_service.py  test_retrieval_engine.py  test_short_term_redis.py  test_skills_manager.py
(+11 files in other folders)
