[project]
name = "cognix"
version = "0.1.0"
description = "面向企业 AI Agent 的个人工作习惯与偏好记忆引擎"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "apscheduler>=3.10.4",
    "lark-oapi>=1.2.1",
    "python-dotenv>=1.0.1",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "redis>=5.0.0"
]

[project.scripts]
cognix = "cognix.interfaces.cli.main:cli"

[tool.poetry]
# 兼容Poetry配置
name = "cognix"
version = "0.1.0"
description = "面向企业 AI Agent 的个人工作习惯与偏好记忆引擎"
authors = ["Your Name <your@email.com>"]
readme = "README.md"
packages = [{include = "cognix"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
apscheduler = "^3.10.4"
lark-oapi = "^1.2.1"
python-dotenv = "^1.0.1"
langchain = "^0.2.0"
langchain-community = "^0.2.0"
openai = "^1.0.0"
anthropic = "^0.20.0"
redis = "^5.0.0"

[tool.poetry.scripts]
cognix = "cognix.interfaces.cli.main:cli"

[tool.uv]
python-version = "3.10"
resolution = "highest"
prerelease = "allow"
index-url = "https://pypi.org/simple"
extra-index-url = []

[tool.uv.scripts]
test = "pytest tests/ -v"
test-cov = "pytest tests/ -v --cov=cognix.core --cov-report=term-missing"
lint = "flake8 cognix/ --max-line-length=120"
format = "black cognix/ tests/ examples/"
serve = "cognix serve"

[build-system]
requires = ["poetry-core", "uv>=0.2.0"]
build-backend = "poetry.core.masonry.api"
